language/move-lang/tests/move_check/parser/let_binding_bad_name.move
module M {
    fun f() {
        // Test for a bad variable or struct type name
        let {};
    }
}
